--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
                         <a class="nav-link active" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contactForm.html">Contact</a>
+                        <a class="nav-link" href="contectForm.html">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -42,7 +42,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Dream Beauty Fashion Women's Collared Neck Long Sleeve Slim Fit Casual Tee Top, 23" inches (Apple-01-P)</h5>
                         <p class="card-text">Rs. 600</p>
-                        <a href="viewDetails.html" class="btn btn-primary">View Details</a>
+                        <a href="viewDetails1.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -54,7 +54,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Robocraze UNO R3 with USB Cable | Uno R3 Development Board with ATmega328 (Pack of 1)</h5>
                         <p class="card-text">Rs. 2000</p>
-                        <a href="viewDetails.html" class="btn btn-primary">View Details</a>
+                        <a href="viewDetails2.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                     <div class="card-body">
                         <h5 class="card-title">ATTRO Ultra Pro 2 Motivational 2L BPA-Free Water Bottle with Leak-Proof Flip-Top Cap, Nylon Strap and Stylish Mint Green Color for Daily Hydration, Plastic</h5>
                         <p class="card-text">Rs. 200</p>
-                        <a href="viewDetails.html" class="btn btn-primary">View Details</a>
+                        <a href="viewDetails3.html" class="btn btn-primary">View Details</a>
                     </div>
                 </div>
             </div>
