--- a/shop.html
+++ b/shop.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop - E-commerce Website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet"> <!-- Link to external styles.css -->
+    <link href="styles.css" rel="stylesheet"> 
 </head>
 <body>
 
@@ -25,7 +25,7 @@
                         <a class="nav-link active" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contectForm.html">Contact</a>
+                        <a class="nav-link" href="contactForm.html">Contact</a>
                     </li>
                 </ul>
             </div>
