--- a/contactSubmission.html
+++ b/contactSubmission.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact</a>
+                        <a class="nav-link active" href="contactForm.html">Contact</a>
                     </li>
                 </ul>
             </div>
