--- a/productBought.html
+++ b/productBought.html
@@ -25,7 +25,7 @@
                         <a class="nav-link" href="shop.html">Shop</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contactForm.html">Contact</a>
                     </li>
                 </ul>
             </div>
